# viewshell

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt
cmake/: ViewshellDeps.cmake
docs/: bridge-api.md
docs/superpowers/plans/: 2026-04-09-viewshell-linux-x11-foundation.md  2026-04-13-bridge-playground-and-subscriptions.md  2026-04-13-bridge-window-host-refactor.md  2026-04-13-engine-resolver-move.md  2026-04-13-minimal-js-native-bridge.md  2026-04-13-promise-bridge.md  2026-04-13-runtime-adapter-move.md  2026-04-13-runtime-backend-refactor.md  2026-04-13-source-layout-refactor.md  2026-04-13-windows-backend-skeleton.md  2026-04-13-windows-webview2-skeleton.md  2026-04-14-windows-bridge.md  2026-04-14-windows-webview-next-step.md  2026-04-15-macos-backend-skeleton.md  2026-04-15-macos-bridge-minimal.md  2026-04-15-macos-webview-minimal.md  2026-04-15-multi-window-and-floating-options.md  2026-04-15-navigation-handler.md
docs/superpowers/specs/: 2026-04-09-viewshell-design.md  2026-04-13-bridge-playground-and-subscriptions-design.md  2026-04-13-bridge-window-host-refactor-design.md  2026-04-13-engine-resolver-move-design.md  2026-04-13-minimal-js-native-bridge-design.md  2026-04-13-promise-bridge-design.md  2026-04-13-runtime-adapter-move-design.md  2026-04-13-runtime-backend-refactor-design.md  2026-04-13-source-layout-refactor-design.md  2026-04-13-windows-backend-skeleton-design.md  2026-04-13-windows-webview2-skeleton-design.md  2026-04-14-windows-bridge-design.md  2026-04-14-windows-webview-next-step-design.md  2026-04-15-macos-backend-skeleton-design.md  2026-04-15-macos-bridge-minimal-design.md  2026-04-15-macos-webview-minimal-design.md  2026-04-15-multi-window-and-floating-options-design.md  2026-04-15-navigation-handler-design.md
examples/: CMakeLists.txt
examples/circle_window/: CMakeLists.txt  main.cpp
examples/circle_window/app/: index.html  main.js
examples/common/: example_asset_path.cpp  example_asset_path.h
examples/custom_tray_demo/: CMakeLists.txt  main.cpp
examples/custom_tray_demo/app/: index.html  menu.html
examples/floating_panel_demo/: CMakeLists.txt  main.cpp
examples/floating_panel_demo/app/: index.html  main.js
examples/hello_viewshell/: CMakeLists.txt  main.cpp
examples/hello_viewshell/app/: index.html  main.js
examples/hover_test/: CMakeLists.txt  main.cpp
examples/hover_test/app/: index.html
examples/linux_x11_smoke/: CMakeLists.txt  main.cpp
examples/linux_x11_smoke/app/: index.html  main.js
examples/tray_demo/: CMakeLists.txt  main.cpp
examples/tray_demo/app/: index.html
include/viewshell/: application.h  bridge_handle.h  capabilities.h  options.h  tray_handle.h  tray_options.h  types.h  window_handle.h
src/: CMakeLists.txt
src/bridge/: builtin_dispatcher.cpp  builtin_dispatcher.h  invoke_bus.cpp  invoke_bus.h  request_tracker.cpp  request_tracker.h  trust_gate.cpp  x11_bridge_driver.cpp  x11_bridge_driver.h
src/host/: window_api_bootstrap.h
src/host/macos/: macos_tray_host.h  macos_tray_host.mm  macos_window_host.h  macos_window_host.mm
src/host/windows/: win32_tray_host.cpp  win32_tray_host.h  win32_window_host.cpp  win32_window_host.h
src/host/x11/: x11_outside_click_detector.cpp  x11_outside_click_detector.h  x11_tray_host.cpp  x11_tray_host.h  x11_window_host.cpp  x11_window_host.h
src/platform/linux_x11/: bridge_driver.cpp  bridge_driver.h  builtin_dispatcher.cpp  drag_context.h  invoke_bus.cpp  invoke_bus.h  kernel_resolver.cpp  linux_x11_backend_runtime.cpp  linux_x11_backend_runtime.h  linux_x11_window_host.cpp  linux_x11_window_host.h  native_window_handle.h  request_tracker.cpp  resource_protocol.cpp  trust_gate.cpp  trust_gate.h  webview_driver.cpp  webview_driver.h  window_driver.cpp  window_driver.h
src/platform/windows/: win32_window_host.cpp  windows_backend_runtime.cpp  windows_backend_runtime.h  windows_window_host.cpp  windows_window_host.h
src/platform/x11/: kernel_resolver.h  linux_x11_backend_runtime.cpp  linux_x11_window_host.cpp  x11_backend_runtime.cpp
src/runtime/: backend_factory.cpp  backend_factory.h  backend_runtime.h  macos_backend_runtime.h  macos_backend_runtime.mm  tray_host.h  win32_backend_runtime.cpp  win32_backend_runtime.h  window_host.cpp  window_host.h  x11_backend_runtime.cpp  x11_backend_runtime.h
src/viewshell/: application.cpp  bridge_handle.cpp  public_types.cpp  runtime_state.h  tray_handle.cpp  window_handle.cpp
src/webview/: engine_resolver.cpp  engine_resolver.h  resource_protocol.cpp  resource_protocol.h  win32_webview_host.cpp  win32_webview_host.h  x11_webview_driver.cpp  x11_webview_driver.h
src/window/: x11_window_driver.cpp  x11_window_driver.h
tests/: CMakeLists.txt
tests/fixtures/alt_app/: index.html
tests/fixtures/local_app/: index.html  main.js  subframe.html
tests/fixtures/local_app/settings/: index.html
tests/integration/: local_app_smoke_test.cpp  remote_untrusted_test.cpp  size_check_test.sh  test_app_harness.cpp  test_app_harness.h  window_driver_smoke_test.cpp  window_driver_test_hooks.h
tests/unit/: application_create_test.cpp  application_lifecycle_test.cpp  bridge_driver_test.cpp  bridge_driver_test_hooks.cpp  bridge_driver_test_hooks.h  builtin_dispatcher_test.cpp  engine_resolver_test.cpp  engine_resolver_test_support.h  invoke_bus_test.cpp  kernel_resolver_test.cpp  kernel_resolver_test_support.h  public_types_test_api.h  request_tracker_test.cpp  resource_protocol_test.cpp  runtime_test_hooks.cpp  runtime_test_hooks.h  trust_gate_test.cpp  webview_driver_test.cpp  window_lifecycle_test.cpp
