cmake_minimum_required(VERSION 3.16)
project(viewshell LANGUAGES CXX)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE PATH "default install prefix" FORCE)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(NOT WIN32)
    file(CREATE_LINK "${CMAKE_BINARY_DIR}/compile_commands.json" "${CMAKE_SOURCE_DIR}/compile_commands.json" SYMBOLIC RESULT _create_link_result)
    if(NOT _create_link_result EQUAL 0)
        message(WARNING "Failed to create compile_commands.json symlink: ${_create_link_result}")
    endif()
endif()

find_package(nlohmann_json REQUIRED)
find_package(tl-expected REQUIRED)
find_package(GTest REQUIRED)
if(NOT WIN32)
    find_package(PkgConfig REQUIRED)
endif()

enable_testing()
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(examples)
